--- a/src/scss/partials/_generales.scss
+++ b/src/scss/partials/_generales.scss
@@ -18,3 +18,12 @@ a {
     max-width: 120rem;
     margin: auto;
 }
+
+li {
+    list-style: none;
+}
+
+img {
+    width: 100%;
+    display: block;
+}
