--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,6 +5,9 @@
     @include m.flex(center, space-around);
     padding: 1rem 0;
     background-color: v.$negro;
+    position: fixed;
+    z-index: 3;
+    width: 100%;
 
     p,
     a {
@@ -27,9 +30,11 @@
         }
 
         nav {
-            display: flex;
-            gap: 1rem;
-
+            display: none;
+            @include m.tablet{
+                display: flex;
+                gap: 2rem;
+            }
             a {
                 transition: color .5s ease-in;
                 font-size: .8rem;
@@ -53,6 +58,7 @@
         }
 
         a {
+            display: none;
             padding: 1rem 2rem;
             background-color: v.$naranja;
             border-radius: 5px;
@@ -61,6 +67,12 @@
 
             &:hover {
                 background-color: adjust-color(v.$naranja, $lightness: -5%);
+            }
+
+            @include m.tablet{
+                & {
+                    display: inline-block;
+                }
             }
         }
 
@@ -82,30 +94,34 @@
 }
 
 .header-presentacion {
-    height: 80vh;
-    background: url('/src/img/portada_web (2).jpg') bottom/cover;
+    height: 95vh;
+    background: url('/src/img/portada_web.jpg') bottom/cover;
     position: relative; 
   }
   
   .header-presentacion__bg {
     width: 100%;
-    height: 80vh;
+    height: 95vh;
     position: absolute;
     background-color: v.$negro;
     opacity: .5;
   }
 
   .header-1-grid{
-    @include m.grid(2, 1fr);
+    @include m.grid(1, 1fr);
     align-items: center;
     height: 80vh;
-    padding: 2rem;
     position: absolute;
     z-index: 2;
-    width: 100%;
+    margin-top: 1rem;
+    gap: 3rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);  
+
+    @include m.tablet{
+        @include m.grid(2, 1fr)
+    }
   }
 
   .header-presentacion__title {
@@ -116,15 +132,18 @@
     }
   
     h1 {
-        font-size: 4rem;
+        font-size: 3rem;
         color: v.$naranja;
     }
   }
 
   .header-presentacion__boton{
     @include m.flex(center, center);
-    gap: 4rem;
-
+    gap: 4rem;    
+    flex-direction: column;
+    @include m.tablet {
+        flex-direction: row;
+    }
 
     a {
         color: v.$negro;
@@ -157,3 +176,62 @@
     }
   }
   
+
+  //MODAL - MENU 
+  .modal-menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: v.$naranja;
+    width: 40vh;
+    height: 100vh;
+    text-align: end;
+    padding: 1rem;
+
+    p {
+        color: v.$negro;
+        cursor: pointer;
+        font: {
+            size: 2rem;
+            weight: bolder;   
+        }
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        margin-top: 2rem;
+       font: {
+        family: v.$fuente-noto;
+        weight: bolder;
+       } 
+
+       li {
+        transition: color .4s ease-in-out;
+        cursor: pointer;
+        border-bottom: 1px solid v.$blanco;
+       }
+       li:hover {
+         color:v.$blanco;
+       }
+    }
+}
+
+
+
+  .mostrar-modal {
+    display: block;
+    animation: animacionmodal .5s 1;
+  }
+
+  @keyframes animacionmodal {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+  }
