--- a/about/css/app.css
+++ b/about/css/app.css
@@ -232,6 +232,14 @@ img {
     opacity: 1;
   }
 }
+.none-header {
+  display: none;
+}
+
+.header-open {
+  display: block;
+}
+
 .info-servicio {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -623,6 +631,42 @@ table td a:last-child {
 
 .form-reservaciones {
   padding-top: 5rem;
+}
+
+.grid-reservacionees {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  margin-top: 5rem;
+  padding: 0 1rem;
+}
+.grid-reservacionees div {
+  background-color: #F97316;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 5px 5px 14px -2px rgb(249, 115, 22);
+  -webkit-box-shadow: 5px 5px 14px -2px rgb(249, 115, 22);
+  -moz-box-shadow: 5px 5px 14px -2px rgb(249, 115, 22);
+}
+.grid-reservacionees div h2, .grid-reservacionees div p {
+  color: #fff;
+  margin: 0.5rem 0;
+  font-family: "Noto Sans", sans-serif;
+}
+.grid-reservacionees div h2 {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 900;
+}
+.grid-reservacionees div a {
+  font-weight: 900;
+  font-family: "Noto Sans", sans-serif;
+  color: #000;
+  display: inline-block;
+  margin-bottom: 0.5rem;
+  width: 100%;
+  padding: 0.3rem;
+  background-color: #fff;
 }
 
 /*# sourceMappingURL=app.css.map */
